# Take-Home-Metreecs

./: .gitignore  README.md  pyproject.toml
data_eng/: models.py  settings.py
data_eng/preparation/: pipeline.py
data_eng/weather/: fetcher.py
