[project]
name = "take-home-metreecs"
version = "0.1.0"
description = "data tranformation and formatting coding test"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "mypy>=1.19.0",
    "numpy>=2.3.5",
    "openmeteo-requests>=1.7.4",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251201",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
]
